--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -3,34 +3,73 @@
     margin: 0;
 }
 
-$bg-color : white;
+$bg-color: white;
 //remove text area border
 .v-text-field > .v-input__control > .v-input__slot:before {
     border-style: none;
 }
-.header{
+.header {
     margin-right: 150px;
 }
 
-//  Home page CSS End
+//  Home page CSS
+
+// background image css
+.sci-bg {
+    background-image: url("assets/images/about-background.png");
+    background-repeat: no-repeat;
+    background-size: 2000px 500px;
+}
+
+.sci-bg-0 {
+    background-image: url("assets/images/footer.png");
+}
+.sci-bg-1 {
+    background-image: url("assets/images/gallery-background.png");
+}
+.sci-bg-2 {
+    background-image: url("assets/images/news-background.png");
+}
+
+
+//End background image css
+
+
+.divider {
+    background-color: red;
+}
+
+// About CSS
+.aboutBtn {
+    margin-top: 120px;
+}
+.about {
+    margin-top: 100px;
+    margin-block-end: 70px;
+}
+.moreabout {
+    color: #d1ccbd;
+    float: right;
+}
+.moreabout:hover {
+    color: red;
+}
 
 //Start Top bar Btn Responsive
 @media (max-width: 30em) {
-    .navsearch {
-        width: 200px;
-        display: block;
-        margin: 0.4em auto;
+    .header {
+        visibility: hidden;
     }
 }
-//End Top bar Btn Responsive
 
 // Destop
 @media (min-width: 1025px) {
     .hidden {
         visibility: hidden;
     }
+    .header {
+    }
 }
 /* tablet */
 @media (min-width: 481px) and (max-width: 1024px) {
-   
-  }
+}
