--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -4,6 +4,8 @@
 }
 
 $bg-color: white;
+$red: #da291c; 
+
 //remove text area border
 .v-text-field > .v-input__control > .v-input__slot:before {
     border-style: none;
@@ -18,7 +20,9 @@ $bg-color: white;
 .sci-bg {
     background-image: url("assets/images/about-background.png");
     background-repeat: no-repeat;
-    background-size: 2000px 500px;
+    background-size: contain;
+    background-position: top center;
+   
 }
 
 .sci-bg-0 {
@@ -31,12 +35,11 @@ $bg-color: white;
     background-image: url("assets/images/news-background.png");
 }
 
-
 //End background image css
 
-
 .divider {
-    background-color: red;
+    background-color: $red;
+    width: 60%;
 }
 
 // About CSS
@@ -52,8 +55,18 @@ $bg-color: white;
     float: right;
 }
 .moreabout:hover {
-    color: red;
+    color: $red;
 }
+
+// Our projects Css
+.project {
+    .v-sheet.v-card {
+        border-radius: 3px;
+        border-block-end: $red solid 50px;
+    }
+}
+
+
 
 //Start Top bar Btn Responsive
 @media (max-width: 30em) {
