--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -68,6 +68,16 @@ $Ecru-white: #b4b1a8;
     }
 }
 
+
+
+//our team css
+.our-team-card {
+
+ margin-left: 300px;
+
+  
+  }
+
 //footer
 
 .footer-divider {
