--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -7,6 +7,19 @@ $yellow: #f2a900;
     padding: 0;
     margin: 0;
 }
+// @import url(//db.onlinewebfonts.com/c/ca600d01171a97410ea97578addeb476?family=Gill+Sans+Infant+Std);
+
+.desktop-header{
+    margin-left: 300px;
+
+}
+.container{
+    font-family: 'tradegothicltcom-bdcn20';
+}
+.header{
+   font-family: 'Trade Gothic LT';
+}
+
 
 //remove text area border
 .v-text-field > .v-input__control > .v-input__slot:before {
@@ -38,6 +51,7 @@ $yellow: #f2a900;
 
 .sci-bg-0 {
     background-image: url("assets/images/footer.png");
+ 
 }
 .sci-bg-1 {
     background-image: url("assets/images/gallery-background.png");
@@ -121,14 +135,14 @@ $yellow: #f2a900;
 
 //Start Top bar Btn Responsive
 @media (max-width: 30em) {
-    .header {
-        visibility: hidden;
-    }
+    // .header {
+    //     visibility: hidden;
+    // }
     .vertical {
         visibility: hidden;
     }
     .banner-slider {
-        margin: 20px 10px 0px;
+        margin: 100px 10px 0px;
     }
     .our-team-card {
         margin-left: 0px;
