add letest news

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -101,12 +101,14 @@ $yellow: #f2a900;
     max-width: 950px;
     height: 400px;
    
+   
 }
 .card-details {
     background-color: $red;
     color: white;
 }
 .team-details-card {
+    // top: -50px;
     border: black solid 1px !important;
 }
 
