--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -10,7 +10,7 @@ $yellow: #f2a900;
 // @import url(//db.onlinewebfonts.com/c/ca600d01171a97410ea97578addeb476?family=Gill+Sans+Infant+Std);
 
 .desktop-header {
-    margin-left: 300px;
+    margin-left: 500px;
 }
 .container {
     font-family: "tradegothicltcom-bdcn20";
@@ -26,7 +26,10 @@ $yellow: #f2a900;
 .header {
     margin-right: 150px;
 }
-
+.search-btn{
+    border: 3px solid black;
+    border-radius: 15px;
+}
 //  Home page CSS
 // Banner CSS
 .banner-slider {
