added about us page

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -113,6 +113,15 @@ $yellow: #f2a900;
 .moreabout:hover {
     color: $red;
 }
+
+
+// About us page
+.about {
+    margin-top: 100px;
+    margin-block-end: 70px;
+}
+
+
 //footer
 
 .capitalize {
